Fix header overlap on medium browsers for event show

--- a/app/styles/components/event-header.less
+++ b/app/styles/components/event-header.less
@@ -14,7 +14,7 @@
     font-size: 36px;
   }
 
-  @media (min-width: @screen-md-min) {
+  @media (min-width: @screen-lg-min) {
     font-size: 48px;
     margin-top: 30px;
   }
@@ -39,7 +39,7 @@
     height: 250px;
   }
 
-  @media (min-width: @screen-md-min) {
+  @media (min-width: @screen-lg-min) {
     font-size: 48px;
     width: 350px;
     height: 350px;
